--- a/Term Project/Heinen_DSC540_Milestone_4.ipynb
+++ b/Term Project/Heinen_DSC540_Milestone_4.ipynb
@@ -2908,27 +2908,240 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 218,
    "id": "d9bbb977-1db2-4cd0-916c-1c42910f0eaf",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "lat\n",
+      "lon\n",
+      "timezone\n",
+      "timezone_offset\n",
+      "data\n",
+      "data2\n",
+      "dt\n",
+      "sunrise\n",
+      "sunset\n",
+      "temp\n",
+      "feels_like\n",
+      "pressure\n",
+      "humidity\n",
+      "dew_point\n",
+      "clouds\n",
+      "visibility\n",
+      "wind_speed\n",
+      "wind_deg\n",
+      "weather\n",
+      "weather2\n",
+      "id\n",
+      "main\n",
+      "description\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Display all current columns in DataFrame. \n",
+    "# Loop through all the columns in df carlos_weather. \n",
+    "for column in carlos_weather.columns:\n",
+    "    # Print each column name\n",
+    "    print(column)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 220,
    "id": "cf793fce-97a0-46f6-b56f-30c64d6f1b15",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Create a list of columns to be removed. \n",
+    "columns_to_remove = ['timezone', 'timezone_offset', 'data', 'data2', 'weather', 'weather2', 'id']\n",
+    "\n",
+    "# Use drop to drop the columns in list. \n",
+    "# Use Axis =1 \n",
+    "carlos_weather = carlos_weather.drop(columns=columns_to_remove, axis=1)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 222,
    "id": "ee6642c7-82ab-48dc-840c-f227950894f5",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>lat</th>\n",
+       "      <th>lon</th>\n",
+       "      <th>dt</th>\n",
+       "      <th>sunrise</th>\n",
+       "      <th>sunset</th>\n",
+       "      <th>temp</th>\n",
+       "      <th>feels_like</th>\n",
+       "      <th>pressure</th>\n",
+       "      <th>humidity</th>\n",
+       "      <th>dew_point</th>\n",
+       "      <th>clouds</th>\n",
+       "      <th>visibility</th>\n",
+       "      <th>wind_speed</th>\n",
+       "      <th>wind_deg</th>\n",
+       "      <th>main</th>\n",
+       "      <th>description</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>39.91</td>\n",
+       "      <td>-75.17</td>\n",
+       "      <td>1529452800</td>\n",
+       "      <td>1529400718</td>\n",
+       "      <td>1529454727</td>\n",
+       "      <td>301.24</td>\n",
+       "      <td>300.76</td>\n",
+       "      <td>1009</td>\n",
+       "      <td>38</td>\n",
+       "      <td>285.60</td>\n",
+       "      <td>40</td>\n",
+       "      <td>10000</td>\n",
+       "      <td>4.63</td>\n",
+       "      <td>10</td>\n",
+       "      <td>Clouds</td>\n",
+       "      <td>scattered clouds</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>41.50</td>\n",
+       "      <td>-81.69</td>\n",
+       "      <td>1432512000</td>\n",
+       "      <td>1432461618</td>\n",
+       "      <td>1432514831</td>\n",
+       "      <td>298.60</td>\n",
+       "      <td>297.96</td>\n",
+       "      <td>1021</td>\n",
+       "      <td>29</td>\n",
+       "      <td>279.29</td>\n",
+       "      <td>100</td>\n",
+       "      <td>10000</td>\n",
+       "      <td>3.60</td>\n",
+       "      <td>130</td>\n",
+       "      <td>Clouds</td>\n",
+       "      <td>overcast clouds</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>41.50</td>\n",
+       "      <td>-81.69</td>\n",
+       "      <td>1558915200</td>\n",
+       "      <td>1558864737</td>\n",
+       "      <td>1558918137</td>\n",
+       "      <td>288.96</td>\n",
+       "      <td>288.97</td>\n",
+       "      <td>1017</td>\n",
+       "      <td>91</td>\n",
+       "      <td>287.49</td>\n",
+       "      <td>100</td>\n",
+       "      <td>6437</td>\n",
+       "      <td>4.63</td>\n",
+       "      <td>20</td>\n",
+       "      <td>Mist</td>\n",
+       "      <td>mist</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>40.45</td>\n",
+       "      <td>-80.01</td>\n",
+       "      <td>1685836800</td>\n",
+       "      <td>1685785884</td>\n",
+       "      <td>1685839516</td>\n",
+       "      <td>299.30</td>\n",
+       "      <td>299.30</td>\n",
+       "      <td>1013</td>\n",
+       "      <td>73</td>\n",
+       "      <td>294.08</td>\n",
+       "      <td>75</td>\n",
+       "      <td>10000</td>\n",
+       "      <td>2.06</td>\n",
+       "      <td>80</td>\n",
+       "      <td>Clouds</td>\n",
+       "      <td>broken clouds</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>41.50</td>\n",
+       "      <td>-81.69</td>\n",
+       "      <td>1568505600</td>\n",
+       "      <td>1568459154</td>\n",
+       "      <td>1568504350</td>\n",
+       "      <td>293.93</td>\n",
+       "      <td>293.87</td>\n",
+       "      <td>1022</td>\n",
+       "      <td>69</td>\n",
+       "      <td>288.04</td>\n",
+       "      <td>0</td>\n",
+       "      <td>10000</td>\n",
+       "      <td>3.10</td>\n",
+       "      <td>270</td>\n",
+       "      <td>Clear</td>\n",
+       "      <td>clear sky</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     lat    lon          dt     sunrise      sunset    temp  feels_like  \\\n",
+       "0  39.91 -75.17  1529452800  1529400718  1529454727  301.24      300.76   \n",
+       "1  41.50 -81.69  1432512000  1432461618  1432514831  298.60      297.96   \n",
+       "2  41.50 -81.69  1558915200  1558864737  1558918137  288.96      288.97   \n",
+       "3  40.45 -80.01  1685836800  1685785884  1685839516  299.30      299.30   \n",
+       "4  41.50 -81.69  1568505600  1568459154  1568504350  293.93      293.87   \n",
+       "\n",
+       "   pressure  humidity  dew_point  clouds  visibility  wind_speed  wind_deg  \\\n",
+       "0      1009        38     285.60      40       10000        4.63        10   \n",
+       "1      1021        29     279.29     100       10000        3.60       130   \n",
+       "2      1017        91     287.49     100        6437        4.63        20   \n",
+       "3      1013        73     294.08      75       10000        2.06        80   \n",
+       "4      1022        69     288.04       0       10000        3.10       270   \n",
+       "\n",
+       "     main       description  \n",
+       "0  Clouds  scattered clouds  \n",
+       "1  Clouds   overcast clouds  \n",
+       "2    Mist              mist  \n",
+       "3  Clouds     broken clouds  \n",
+       "4   Clear         clear sky  "
+      ]
+     },
+     "execution_count": 222,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# View The DataFrame at this point.\n",
+    "carlos_weather.head(5)"
+   ]
   },
   {
    "cell_type": "markdown",
