--- a/Term Project/Heinen_DSC540_Milestone_4.ipynb
+++ b/Term Project/Heinen_DSC540_Milestone_4.ipynb
@@ -3155,6 +3155,241 @@
   },
   {
    "cell_type": "markdown",
+   "id": "798b5151-4946-42b5-b171-0e90c359033b",
+   "metadata": {},
+   "source": [
+    "The conversion formula from kelvin to Fahrenheit is shown below: \n",
+    "\n",
+    "         °F = (K − 273.15) × (9/5) + 32\n",
+    "\n",
+    "We will apply this formula to the temp, dew_point and feels_like columns. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 225,
+   "id": "1ca91e13-bf38-4732-b45c-11279d02a16e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define a function to convert Kelvin to Fahrenheit\n",
+    "def kelvin_to_fahrenheit(k):\n",
+    "    return k * 9/5 - 459.67"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 229,
+   "id": "ecbed714-ad55-400c-b338-63b67fddc2dd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Apply the conversion function kelvin_to_fahrenheit to temp \n",
+    "carlos_weather['temp'] = carlos_weather['temp'].apply(kelvin_to_fahrenheit)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 238,
+   "id": "f8fe5327-cef0-49c4-aebd-b85053c0ec16",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Apply the conversion function kelvin_to_fahrenheit to feels like. \n",
+    "carlos_weather['feels_like'] = carlos_weather['feels_like'].apply(kelvin_to_fahrenheit)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 240,
+   "id": "cb0b99e6-0838-4163-8e85-9a8d67acc7d2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Apply the conversion function kelvin_to_fahrenheit to dew_point\n",
+    "carlos_weather['dew_point'] = carlos_weather['dew_point'].apply(kelvin_to_fahrenheit)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 242,
+   "id": "93c672ab-6cc6-46ff-a3ae-3a6d42119512",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>lat</th>\n",
+       "      <th>lon</th>\n",
+       "      <th>dt</th>\n",
+       "      <th>sunrise</th>\n",
+       "      <th>sunset</th>\n",
+       "      <th>temp</th>\n",
+       "      <th>feels_like</th>\n",
+       "      <th>pressure</th>\n",
+       "      <th>humidity</th>\n",
+       "      <th>dew_point</th>\n",
+       "      <th>clouds</th>\n",
+       "      <th>visibility</th>\n",
+       "      <th>wind_speed</th>\n",
+       "      <th>wind_deg</th>\n",
+       "      <th>main</th>\n",
+       "      <th>description</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>39.91</td>\n",
+       "      <td>-75.17</td>\n",
+       "      <td>1529452800</td>\n",
+       "      <td>1529400718</td>\n",
+       "      <td>1529454727</td>\n",
+       "      <td>82.562</td>\n",
+       "      <td>81.698</td>\n",
+       "      <td>1009</td>\n",
+       "      <td>38</td>\n",
+       "      <td>54.410</td>\n",
+       "      <td>40</td>\n",
+       "      <td>10000</td>\n",
+       "      <td>4.63</td>\n",
+       "      <td>10</td>\n",
+       "      <td>Clouds</td>\n",
+       "      <td>scattered clouds</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>41.50</td>\n",
+       "      <td>-81.69</td>\n",
+       "      <td>1432512000</td>\n",
+       "      <td>1432461618</td>\n",
+       "      <td>1432514831</td>\n",
+       "      <td>77.810</td>\n",
+       "      <td>76.658</td>\n",
+       "      <td>1021</td>\n",
+       "      <td>29</td>\n",
+       "      <td>43.052</td>\n",
+       "      <td>100</td>\n",
+       "      <td>10000</td>\n",
+       "      <td>3.60</td>\n",
+       "      <td>130</td>\n",
+       "      <td>Clouds</td>\n",
+       "      <td>overcast clouds</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>41.50</td>\n",
+       "      <td>-81.69</td>\n",
+       "      <td>1558915200</td>\n",
+       "      <td>1558864737</td>\n",
+       "      <td>1558918137</td>\n",
+       "      <td>60.458</td>\n",
+       "      <td>60.476</td>\n",
+       "      <td>1017</td>\n",
+       "      <td>91</td>\n",
+       "      <td>57.812</td>\n",
+       "      <td>100</td>\n",
+       "      <td>6437</td>\n",
+       "      <td>4.63</td>\n",
+       "      <td>20</td>\n",
+       "      <td>Mist</td>\n",
+       "      <td>mist</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>40.45</td>\n",
+       "      <td>-80.01</td>\n",
+       "      <td>1685836800</td>\n",
+       "      <td>1685785884</td>\n",
+       "      <td>1685839516</td>\n",
+       "      <td>79.070</td>\n",
+       "      <td>79.070</td>\n",
+       "      <td>1013</td>\n",
+       "      <td>73</td>\n",
+       "      <td>69.674</td>\n",
+       "      <td>75</td>\n",
+       "      <td>10000</td>\n",
+       "      <td>2.06</td>\n",
+       "      <td>80</td>\n",
+       "      <td>Clouds</td>\n",
+       "      <td>broken clouds</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>41.50</td>\n",
+       "      <td>-81.69</td>\n",
+       "      <td>1568505600</td>\n",
+       "      <td>1568459154</td>\n",
+       "      <td>1568504350</td>\n",
+       "      <td>69.404</td>\n",
+       "      <td>69.296</td>\n",
+       "      <td>1022</td>\n",
+       "      <td>69</td>\n",
+       "      <td>58.802</td>\n",
+       "      <td>0</td>\n",
+       "      <td>10000</td>\n",
+       "      <td>3.10</td>\n",
+       "      <td>270</td>\n",
+       "      <td>Clear</td>\n",
+       "      <td>clear sky</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     lat    lon          dt     sunrise      sunset    temp  feels_like  \\\n",
+       "0  39.91 -75.17  1529452800  1529400718  1529454727  82.562      81.698   \n",
+       "1  41.50 -81.69  1432512000  1432461618  1432514831  77.810      76.658   \n",
+       "2  41.50 -81.69  1558915200  1558864737  1558918137  60.458      60.476   \n",
+       "3  40.45 -80.01  1685836800  1685785884  1685839516  79.070      79.070   \n",
+       "4  41.50 -81.69  1568505600  1568459154  1568504350  69.404      69.296   \n",
+       "\n",
+       "   pressure  humidity  dew_point  clouds  visibility  wind_speed  wind_deg  \\\n",
+       "0      1009        38     54.410      40       10000        4.63        10   \n",
+       "1      1021        29     43.052     100       10000        3.60       130   \n",
+       "2      1017        91     57.812     100        6437        4.63        20   \n",
+       "3      1013        73     69.674      75       10000        2.06        80   \n",
+       "4      1022        69     58.802       0       10000        3.10       270   \n",
+       "\n",
+       "     main       description  \n",
+       "0  Clouds  scattered clouds  \n",
+       "1  Clouds   overcast clouds  \n",
+       "2    Mist              mist  \n",
+       "3  Clouds     broken clouds  \n",
+       "4   Clear         clear sky  "
+      ]
+     },
+     "execution_count": 242,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# View Results\n",
+    "carlos_weather.head(5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "f258e868-11fc-4956-a634-aa683bece348",
    "metadata": {},
    "source": [
