--- a/Term Project/Heinen_DSC540_Milestone_4_FULL_API_CALL.ipynb
+++ b/Term Project/Heinen_DSC540_Milestone_4_FULL_API_CALL.ipynb
@@ -3286,8 +3286,484 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 134,
    "id": "73dbd3e0-43b7-430c-81a7-8423473e9744",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Rename Clouds to cloud_cover\n",
+    "carlos_weather = carlos_weather.rename(columns={'clouds': 'cloud_cover'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "id": "71aba7c2-b690-4143-8827-c722db9094a2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Rename main to weather_type\n",
+    "carlos_weather = carlos_weather.rename(columns={'main': 'weather_type'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "id": "5ca175e4-a805-444f-b96b-6d67153c2f6a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Rename main to weather_type\n",
+    "carlos_weather = carlos_weather.rename(columns={'main': 'weather_type'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "id": "cd1d2497-c2be-45f9-b3b5-226d756ce0e0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Rename dt to datetime\n",
+    "carlos_weather = carlos_weather.rename(columns={'dt': 'datetime'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "id": "d30a5f26-47a3-4dc5-88b7-615e31453988",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>lat</th>\n",
+       "      <th>lon</th>\n",
+       "      <th>datetime</th>\n",
+       "      <th>temp</th>\n",
+       "      <th>feels_like</th>\n",
+       "      <th>pressure</th>\n",
+       "      <th>humidity</th>\n",
+       "      <th>dew_point</th>\n",
+       "      <th>cloud_cover</th>\n",
+       "      <th>wind_deg</th>\n",
+       "      <th>weather_type</th>\n",
+       "      <th>description</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>39.91</td>\n",
+       "      <td>-75.17</td>\n",
+       "      <td>1529452800</td>\n",
+       "      <td>82.562</td>\n",
+       "      <td>81.698</td>\n",
+       "      <td>1009</td>\n",
+       "      <td>38</td>\n",
+       "      <td>54.410</td>\n",
+       "      <td>40</td>\n",
+       "      <td>10</td>\n",
+       "      <td>Clouds</td>\n",
+       "      <td>scattered clouds</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>41.50</td>\n",
+       "      <td>-81.69</td>\n",
+       "      <td>1432512000</td>\n",
+       "      <td>77.810</td>\n",
+       "      <td>76.658</td>\n",
+       "      <td>1021</td>\n",
+       "      <td>29</td>\n",
+       "      <td>43.052</td>\n",
+       "      <td>100</td>\n",
+       "      <td>130</td>\n",
+       "      <td>Clouds</td>\n",
+       "      <td>overcast clouds</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>41.50</td>\n",
+       "      <td>-81.69</td>\n",
+       "      <td>1558915200</td>\n",
+       "      <td>60.458</td>\n",
+       "      <td>60.476</td>\n",
+       "      <td>1017</td>\n",
+       "      <td>91</td>\n",
+       "      <td>57.812</td>\n",
+       "      <td>100</td>\n",
+       "      <td>20</td>\n",
+       "      <td>Mist</td>\n",
+       "      <td>mist</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>40.45</td>\n",
+       "      <td>-80.01</td>\n",
+       "      <td>1685836800</td>\n",
+       "      <td>79.070</td>\n",
+       "      <td>79.070</td>\n",
+       "      <td>1013</td>\n",
+       "      <td>73</td>\n",
+       "      <td>69.674</td>\n",
+       "      <td>75</td>\n",
+       "      <td>80</td>\n",
+       "      <td>Clouds</td>\n",
+       "      <td>broken clouds</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>41.50</td>\n",
+       "      <td>-81.69</td>\n",
+       "      <td>1568505600</td>\n",
+       "      <td>69.404</td>\n",
+       "      <td>69.296</td>\n",
+       "      <td>1022</td>\n",
+       "      <td>69</td>\n",
+       "      <td>58.802</td>\n",
+       "      <td>0</td>\n",
+       "      <td>270</td>\n",
+       "      <td>Clear</td>\n",
+       "      <td>clear sky</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     lat    lon    datetime    temp  feels_like  pressure  humidity  \\\n",
+       "0  39.91 -75.17  1529452800  82.562      81.698      1009        38   \n",
+       "1  41.50 -81.69  1432512000  77.810      76.658      1021        29   \n",
+       "2  41.50 -81.69  1558915200  60.458      60.476      1017        91   \n",
+       "3  40.45 -80.01  1685836800  79.070      79.070      1013        73   \n",
+       "4  41.50 -81.69  1568505600  69.404      69.296      1022        69   \n",
+       "\n",
+       "   dew_point  cloud_cover  wind_deg weather_type       description  \n",
+       "0     54.410           40        10       Clouds  scattered clouds  \n",
+       "1     43.052          100       130       Clouds   overcast clouds  \n",
+       "2     57.812          100        20         Mist              mist  \n",
+       "3     69.674           75        80       Clouds     broken clouds  \n",
+       "4     58.802            0       270        Clear         clear sky  "
+      ]
+     },
+     "execution_count": 142,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# View Results\n",
+    "carlos_weather.head(5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f9e0b0db-a60d-47a8-b1ea-a43f097a1d87",
+   "metadata": {},
+   "source": [
+    "# Transformation 6: Convert pressure from hPa or millibars to atm (Atmosphere)\n",
+    "\n",
+    "This is a far easier metric for the casual viewer to understand and comprehend. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "id": "200f19ce-015b-4204-a6c3-2648c630e4a1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define a function to convert hPa to atm\n",
+    "def hpa_to_atm(h):\n",
+    "    return h * 0.0009869233"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "id": "a2b54fd4-87f1-42b2-80e4-bd38fcbf3035",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Apply the conversion function hpa_to_atm and add a column pressure_atm\n",
+    "carlos_weather['pressure_atm'] = carlos_weather['pressure'].apply(hpa_to_atm)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "id": "6d125bee-0991-4007-9783-ee063d4495e6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Rename pressure to pressure_hPa\n",
+    "carlos_weather = carlos_weather.rename(columns={'pressure': 'pressure_hPa'})\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 155,
+   "id": "13f4fce1-4614-4d58-81a2-f428d881f09a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>lat</th>\n",
+       "      <th>lon</th>\n",
+       "      <th>datetime</th>\n",
+       "      <th>temp</th>\n",
+       "      <th>feels_like</th>\n",
+       "      <th>pressure_hPa</th>\n",
+       "      <th>humidity</th>\n",
+       "      <th>dew_point</th>\n",
+       "      <th>cloud_cover</th>\n",
+       "      <th>wind_deg</th>\n",
+       "      <th>weather_type</th>\n",
+       "      <th>description</th>\n",
+       "      <th>pressure_atm</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>39.91</td>\n",
+       "      <td>-75.17</td>\n",
+       "      <td>1529452800</td>\n",
+       "      <td>82.562</td>\n",
+       "      <td>81.698</td>\n",
+       "      <td>1009</td>\n",
+       "      <td>38</td>\n",
+       "      <td>54.410</td>\n",
+       "      <td>40</td>\n",
+       "      <td>10</td>\n",
+       "      <td>Clouds</td>\n",
+       "      <td>scattered clouds</td>\n",
+       "      <td>0.995806</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>41.50</td>\n",
+       "      <td>-81.69</td>\n",
+       "      <td>1432512000</td>\n",
+       "      <td>77.810</td>\n",
+       "      <td>76.658</td>\n",
+       "      <td>1021</td>\n",
+       "      <td>29</td>\n",
+       "      <td>43.052</td>\n",
+       "      <td>100</td>\n",
+       "      <td>130</td>\n",
+       "      <td>Clouds</td>\n",
+       "      <td>overcast clouds</td>\n",
+       "      <td>1.007649</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>41.50</td>\n",
+       "      <td>-81.69</td>\n",
+       "      <td>1558915200</td>\n",
+       "      <td>60.458</td>\n",
+       "      <td>60.476</td>\n",
+       "      <td>1017</td>\n",
+       "      <td>91</td>\n",
+       "      <td>57.812</td>\n",
+       "      <td>100</td>\n",
+       "      <td>20</td>\n",
+       "      <td>Mist</td>\n",
+       "      <td>mist</td>\n",
+       "      <td>1.003701</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>40.45</td>\n",
+       "      <td>-80.01</td>\n",
+       "      <td>1685836800</td>\n",
+       "      <td>79.070</td>\n",
+       "      <td>79.070</td>\n",
+       "      <td>1013</td>\n",
+       "      <td>73</td>\n",
+       "      <td>69.674</td>\n",
+       "      <td>75</td>\n",
+       "      <td>80</td>\n",
+       "      <td>Clouds</td>\n",
+       "      <td>broken clouds</td>\n",
+       "      <td>0.999753</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>41.50</td>\n",
+       "      <td>-81.69</td>\n",
+       "      <td>1568505600</td>\n",
+       "      <td>69.404</td>\n",
+       "      <td>69.296</td>\n",
+       "      <td>1022</td>\n",
+       "      <td>69</td>\n",
+       "      <td>58.802</td>\n",
+       "      <td>0</td>\n",
+       "      <td>270</td>\n",
+       "      <td>Clear</td>\n",
+       "      <td>clear sky</td>\n",
+       "      <td>1.008636</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     lat    lon    datetime    temp  feels_like  pressure_hPa  humidity  \\\n",
+       "0  39.91 -75.17  1529452800  82.562      81.698          1009        38   \n",
+       "1  41.50 -81.69  1432512000  77.810      76.658          1021        29   \n",
+       "2  41.50 -81.69  1558915200  60.458      60.476          1017        91   \n",
+       "3  40.45 -80.01  1685836800  79.070      79.070          1013        73   \n",
+       "4  41.50 -81.69  1568505600  69.404      69.296          1022        69   \n",
+       "\n",
+       "   dew_point  cloud_cover  wind_deg weather_type       description  \\\n",
+       "0     54.410           40        10       Clouds  scattered clouds   \n",
+       "1     43.052          100       130       Clouds   overcast clouds   \n",
+       "2     57.812          100        20         Mist              mist   \n",
+       "3     69.674           75        80       Clouds     broken clouds   \n",
+       "4     58.802            0       270        Clear         clear sky   \n",
+       "\n",
+       "   pressure_atm  \n",
+       "0      0.995806  \n",
+       "1      1.007649  \n",
+       "2      1.003701  \n",
+       "3      0.999753  \n",
+       "4      1.008636  "
+      ]
+     },
+     "execution_count": 155,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# View Results\n",
+    "carlos_weather.head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 157,
+   "id": "7914f0a8-c712-4281-9968-c25c5ee3328f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1936, 13)"
+      ]
+     },
+     "execution_count": 157,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# View the shape of dataframe. \n",
+    "carlos_weather.shape\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dfd0951b-cf40-4e6f-872a-4737e73ebbc5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b9009868-1563-4e00-bbe9-902268c48bb3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ff0664bf-886b-46db-8960-23e2c944e268",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ea410767-00f1-41ae-a2e7-3331b972462f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e0428415-4826-4e40-9c70-e378f480a664",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "146dbe3a-9dba-495b-93b5-a57d994203af",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
+   "id": "8cc899bd-4a95-450f-a155-cd2f6f2b530d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Export the final dataset to CSV so it can be read in as we move forward in the project. \n",
+    "carlos_weather.to_csv('carlos_weather_from_api.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "89789453-90fe-40f8-83c0-b6f27fe857e9",
    "metadata": {},
    "outputs": [],
    "source": []
