--- a/Term Project/Heinen_DSC540_Milestone_4_FULL_API_CALL.ipynb
+++ b/Term Project/Heinen_DSC540_Milestone_4_FULL_API_CALL.ipynb
@@ -3702,62 +3702,328 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dfd0951b-cf40-4e6f-872a-4737e73ebbc5",
+   "cell_type": "markdown",
+   "id": "9e0c6611-1e40-46b8-be6f-e9f601cd5f95",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Transformation 7: Remove Duplicate Rows. \n",
+    "\n",
+    "It is guaranteed that Santana put multiple balls in play many games across his career. because of this there are bound to be duplicate rows in our dateset. For best data practices we will remove the duplicate rows. "
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 168,
    "id": "b9009868-1563-4e00-bbe9-902268c48bb3",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Use drop duplicates to remove all duplicate rows. \n",
+    "carlos_weather_no_duplicates = carlos_weather.drop_duplicates()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 174,
    "id": "ff0664bf-886b-46db-8960-23e2c944e268",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "660\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check shape of new DataFrame. \n",
+    "carlos_weather_no_duplicates.head(10)\n",
+    "print(len(carlos_weather_no_duplicates))"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 176,
    "id": "ea410767-00f1-41ae-a2e7-3331b972462f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(660, 13)"
+      ]
+     },
+     "execution_count": 176,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check the shape of the new DataFrame\n",
+    "carlos_weather_no_duplicates.shape\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c57a3a5d-66ab-403f-823c-bf9ab144ee7f",
+   "metadata": {},
+   "source": [
+    "Here we can see that we have eliminated many duplicate rows from the dataset. This will pay dividends later as we need to be efficient with our data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1ae6c524-0f4d-4992-9e7b-f492cdc86c5b",
+   "metadata": {},
+   "source": [
+    "# Display Final Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 186,
+   "id": "a5f8a875-d548-4b7a-b359-f439592f7ee6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(660, 13)"
+      ]
+     },
+     "execution_count": 186,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Display final dataset size. \n",
+    "# Check the shape of the  DataFrame\n",
+    "carlos_weather_no_duplicates.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 182,
+   "id": "b6ee269c-7008-455f-b879-9bfee39d6e30",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      lat    lon    datetime    temp  feels_like  pressure_hPa  humidity  \\\n",
+      "0   39.91 -75.17  1529452800  82.562      81.698          1009        38   \n",
+      "1   41.50 -81.69  1432512000  77.810      76.658          1021        29   \n",
+      "2   41.50 -81.69  1558915200  60.458      60.476          1017        91   \n",
+      "3   40.45 -80.01  1685836800  79.070      79.070          1013        73   \n",
+      "4   41.50 -81.69  1568505600  69.404      69.296          1022        69   \n",
+      "5   39.05 -94.48  1649721600  63.644      61.628          1009        41   \n",
+      "6   39.91 -75.17  1529971200  76.838      75.812          1019        34   \n",
+      "7   41.50 -81.69  1503360000  78.710      78.710          1017        72   \n",
+      "8   41.50 -81.69  1563494400  86.720      93.308          1010        62   \n",
+      "9   44.98 -93.28  1715126400  67.406      66.200           996        50   \n",
+      "10  41.50 -81.69  1599696000  71.654      72.554          1023        86   \n",
+      "11  39.91 -75.17  1534464000  83.966      86.702          1018        57   \n",
+      "12  39.91 -75.17  1524960000  61.772      61.556          1009        83   \n",
+      "13  39.05 -94.48  1625616000  85.334      87.188          1014        51   \n",
+      "14  41.50 -81.69  1468195200  78.224      77.810          1017        44   \n",
+      "15  39.91 -75.17  1530057600  74.156      73.724          1022        52   \n",
+      "16  39.05 -94.48  1627516800  93.110     105.494          1015        57   \n",
+      "17  44.98 -93.28  1718150400  80.384      80.114          1009        39   \n",
+      "18  41.50 -81.69  1493251200  80.078      79.736          1002        37   \n",
+      "20  44.98 -93.28  1712793600  61.034      59.324          1009        53   \n",
+      "21  40.45 -80.01  1687996800  71.456      71.726          1016        73   \n",
+      "22  41.50 -81.69  1560384000  73.742      72.842          1010        43   \n",
+      "23  41.50 -81.69  1494979200  82.436      81.950          1011        41   \n",
+      "24  39.91 -75.17  1530403200  89.798      91.418          1016        43   \n",
+      "25  41.50 -81.69  1439510400  77.828      77.810          1018        53   \n",
+      "\n",
+      "    dew_point  cloud_cover  wind_deg weather_type       description  \\\n",
+      "0      54.410           40        10       Clouds  scattered clouds   \n",
+      "1      43.052          100       130       Clouds   overcast clouds   \n",
+      "2      57.812          100        20         Mist              mist   \n",
+      "3      69.674           75        80       Clouds     broken clouds   \n",
+      "4      58.802            0       270        Clear         clear sky   \n",
+      "5      39.542            0       110        Clear         clear sky   \n",
+      "6      46.382           40       340       Clouds  scattered clouds   \n",
+      "7      68.918           20       200       Clouds        few clouds   \n",
+      "8      72.140            0       200        Clear         clear sky   \n",
+      "9      48.146          100       240       Clouds   overcast clouds   \n",
+      "10     67.244          100        60         Haze              haze   \n",
+      "11     67.100           40       220       Clouds  scattered clouds   \n",
+      "12     56.552          100       350         Rain        light rain   \n",
+      "13     65.156            0       200        Clear         clear sky   \n",
+      "14     54.554            0        20        Clear         clear sky   \n",
+      "15     55.418           40       170       Clouds  scattered clouds   \n",
+      "16     75.614            0       190        Clear         clear sky   \n",
+      "17     53.186            0       290        Clear         clear sky   \n",
+      "18     51.494            0       170        Clear         clear sky   \n",
+      "20     43.808           75       330       Clouds     broken clouds   \n",
+      "21     62.348          100         0       Clouds   overcast clouds   \n",
+      "22     49.874            0       150        Clear         clear sky   \n",
+      "23     56.390            0       190        Clear         clear sky   \n",
+      "24     64.328           40       230       Clouds  scattered clouds   \n",
+      "25     59.342            0       230        Clear         clear sky   \n",
+      "\n",
+      "    pressure_atm  \n",
+      "0       0.995806  \n",
+      "1       1.007649  \n",
+      "2       1.003701  \n",
+      "3       0.999753  \n",
+      "4       1.008636  \n",
+      "5       0.995806  \n",
+      "6       1.005675  \n",
+      "7       1.003701  \n",
+      "8       0.996793  \n",
+      "9       0.982976  \n",
+      "10      1.009623  \n",
+      "11      1.004688  \n",
+      "12      0.995806  \n",
+      "13      1.000740  \n",
+      "14      1.003701  \n",
+      "15      1.008636  \n",
+      "16      1.001727  \n",
+      "17      0.995806  \n",
+      "18      0.988897  \n",
+      "20      0.995806  \n",
+      "21      1.002714  \n",
+      "22      0.996793  \n",
+      "23      0.997779  \n",
+      "24      1.002714  \n",
+      "25      1.004688  \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Display the first 25 lines to improve context. \n",
+    "print(carlos_weather_no_duplicates.head(25))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 184,
+   "id": "735e09f5-fcab-4644-94d6-609fe8b9c38b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        lat    lon    datetime    temp  feels_like  pressure_hPa  humidity  \\\n",
+      "1580  41.50 -81.69  1558137600  55.724      54.428          1013        73   \n",
+      "1585  41.50 -81.69  1430265600  48.704      45.662          1015        67   \n",
+      "1589  41.50 -81.69  1501977600  71.078      70.430          1017        54   \n",
+      "1596  41.50 -81.69  1599782400  68.756      69.044          1025        79   \n",
+      "1599  39.05 -94.48  1620518400  73.454      73.562          1002        65   \n",
+      "1601  41.50 -81.69  1598486400  80.222      83.858          1013        74   \n",
+      "1619  41.50 -81.69  1595635200  77.756      78.044          1019        60   \n",
+      "1621  41.50 -81.69  1471219200  77.828      78.890          1018        76   \n",
+      "1622  41.50 -81.69  1431561600  48.686      45.644          1029        67   \n",
+      "1656  44.98 -93.28  1716768000  66.182      64.904          1007        51   \n",
+      "1659  40.45 -80.01  1683676800  65.102      63.662          1018        50   \n",
+      "1672  40.45 -80.01  1686009600  71.240      70.124          1014        44   \n",
+      "1684  41.50 -81.69  1601164800  74.858      75.092          1012        65   \n",
+      "1692  44.98 -93.28  1712275200  49.352      45.950          1016        42   \n",
+      "1694  40.45 -80.01  1681344000  74.840      73.346          1015        28   \n",
+      "1709  41.50 -81.69  1440979200  77.846      78.854          1017        75   \n",
+      "1713  41.50 -81.69  1493596800  80.348      81.428          1009        53   \n",
+      "1717  41.50 -81.69  1434672000  75.632      76.514          1013        77   \n",
+      "1720  41.50 -81.69  1564876800  77.396      76.910          1016        44   \n",
+      "1728  41.50 -81.69  1505260800  69.656      69.188          1012        61   \n",
+      "1742  41.50 -81.69  1473292800  85.766      91.004          1014        61   \n",
+      "1759  39.91 -75.17  1535846400  74.174      74.966          1024        78   \n",
+      "1782  41.50 -81.69  1444003200  63.770      63.086          1021        69   \n",
+      "1813  41.50 -81.69  1597276800  78.098      78.152          1019        54   \n",
+      "1884  43.03 -87.97  1696204800  70.178      70.322          1023        73   \n",
+      "\n",
+      "      dew_point  cloud_cover  wind_deg weather_type       description  \\\n",
+      "1580     47.210          100        50       Clouds   overcast clouds   \n",
+      "1585     38.264            0       340        Clear         clear sky   \n",
+      "1589     53.618           75       230       Clouds     broken clouds   \n",
+      "1596     61.988          100       360       Clouds   overcast clouds   \n",
+      "1599     60.980           20       120       Clouds        few clouds   \n",
+      "1601     71.186           40        60       Clouds  scattered clouds   \n",
+      "1619     62.762            0        20        Clear         clear sky   \n",
+      "1621     69.656          100       190       Clouds   overcast clouds   \n",
+      "1622     38.246            0       320        Clear         clear sky   \n",
+      "1656     47.552            0        50        Clear         clear sky   \n",
+      "1659     46.022            0       340        Clear         clear sky   \n",
+      "1672     48.236            0       340        Clear         clear sky   \n",
+      "1684     62.312            0       160        Clear         clear sky   \n",
+      "1692     27.806            0        30        Clear         clear sky   \n",
+      "1694     39.596            0       250        Clear         clear sky   \n",
+      "1709     69.278           40       160       Clouds  scattered clouds   \n",
+      "1713     61.664           75       180         Rain     moderate rain   \n",
+      "1717     67.910           75       180         Rain     moderate rain   \n",
+      "1720     53.798            0       360        Clear         clear sky   \n",
+      "1728     55.616            0        70        Clear         clear sky   \n",
+      "1742     70.772            0       230        Clear         clear sky   \n",
+      "1759     66.884           40       110       Clouds  scattered clouds   \n",
+      "1782     53.420            0       110        Clear         clear sky   \n",
+      "1813     60.116            0        60        Clear         clear sky   \n",
+      "1884     61.124            0       160        Clear         clear sky   \n",
+      "\n",
+      "      pressure_atm  \n",
+      "1580      0.999753  \n",
+      "1585      1.001727  \n",
+      "1589      1.003701  \n",
+      "1596      1.011596  \n",
+      "1599      0.988897  \n",
+      "1601      0.999753  \n",
+      "1619      1.005675  \n",
+      "1621      1.004688  \n",
+      "1622      1.015544  \n",
+      "1656      0.993832  \n",
+      "1659      1.004688  \n",
+      "1672      1.000740  \n",
+      "1684      0.998766  \n",
+      "1692      1.002714  \n",
+      "1694      1.001727  \n",
+      "1709      1.003701  \n",
+      "1713      0.995806  \n",
+      "1717      0.999753  \n",
+      "1720      1.002714  \n",
+      "1728      0.998766  \n",
+      "1742      1.000740  \n",
+      "1759      1.010609  \n",
+      "1782      1.007649  \n",
+      "1813      1.005675  \n",
+      "1884      1.009623  \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Display last 25 lines to improve context. \n",
+    "print(carlos_weather_no_duplicates.tail(25))"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e0428415-4826-4e40-9c70-e378f480a664",
+   "id": "9fd74e72-a2a0-418d-897b-61adc50bf45f",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "146dbe3a-9dba-495b-93b5-a57d994203af",
+   "cell_type": "markdown",
+   "id": "4c27d924-3a29-401f-972e-b2da0562d278",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Export to CSV"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 180,
    "id": "8cc899bd-4a95-450f-a155-cd2f6f2b530d",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Export the final dataset to CSV so it can be read in as we move forward in the project. \n",
-    "carlos_weather.to_csv('carlos_weather_from_api.csv', index=False)"
+    "carlos_weather_no_duplicates.to_csv('carlos_weather_from_api_no_duplicates.csv', index=False)"
    ]
   },
   {
